--- a/komissar/MainWindow.xaml
+++ b/komissar/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:komissar"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1051" Width="1156">
+        Title="MainWindow" Height="1051" Width="1392"
+        KeyDown="Window_KeyDown">
     <Grid Margin="10,-6,10,0" Height="1023" VerticalAlignment="Top" RenderTransformOrigin="0.491,0.453">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -57,8 +58,6 @@
                 <ComboBoxItem Content="A"/>
                 <ComboBoxItem Content="B"/>
                 <ComboBoxItem Content="C"/>
-                <ComboBoxItem Content="D"/>
-                <ComboBoxItem Content="E"/>
             </ComboBox>
 
             <TextBlock Text="Дата выдачи ВУ:" FontSize="14" FontWeight="Bold" Canvas.Left="200" Canvas.Top="454"/>
@@ -79,7 +78,7 @@
             <TextBox x:Name="TbValidDate1" Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="599" Width="119" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
             <TextBlock Text="Место первоначального удара:" FontSize="14" FontWeight="Bold" Canvas.Left="10" Canvas.Top="622" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <Button Content="Открыть форму" Canvas.Left="232" Canvas.Top="622" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Button Content="Открыть форму" Canvas.Left="232" Canvas.Top="622" HorizontalAlignment="Center" VerticalAlignment="Top" Click="Button_Click"/>
             <TextBlock Text="Характер и перечень видимых поврежденных деталей и элементов:" FontWeight="Bold" Canvas.Left="10" Canvas.Top="646" HorizontalAlignment="Center" VerticalAlignment="Top"/>
             <TextBox x:Name="TbDiscription1" TextWrapping="Wrap" Canvas.Left="9" Canvas.Top="667" Height="64" HorizontalAlignment="Left" VerticalAlignment="Top" Width="400"/>
             <TextBlock Text="Замечания:" FontSize="14" FontWeight="Bold" Canvas.Left="10" Canvas.Top="736" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -98,8 +97,8 @@
             </ComboBox>
         </Canvas>
         <Label Content="Извещение о дорожно-транспортном происшествии" HorizontalAlignment="Center" Margin="0,25,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Height="37" Width="532"/>
-        <Button x:Name="BtnAddData" Content="Отправить данные" HorizontalAlignment="Left" Margin="480,957,0,0" VerticalAlignment="Top" Height="44" Width="158" Click="BtnAddData_Click_1"/>
-        <Canvas Margin="700,183,0,0" Height="830" VerticalAlignment="Top" HorizontalAlignment="Left" Width="426">
+        <Button x:Name="BtnAddData" Content="Отправить данные" HorizontalAlignment="Left" Margin="598,969,0,0" VerticalAlignment="Top" Height="44" Width="158" Click="BtnAddData_Click_1"/>
+        <Canvas Margin="936,183,0,0" Height="830" VerticalAlignment="Top" HorizontalAlignment="Left" Width="426">
             <TextBlock Text="Транспортное средство &quot;B&quot;:" FontSize="16" FontWeight="Bold" Canvas.Left="10" Canvas.Top="10"/>
 
             <TextBlock Text="Модель:" FontSize="14" FontWeight="Bold" Canvas.Left="203" Canvas.Top="50" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -131,12 +130,10 @@
             <TextBox x:Name="TbDrvYd2" Canvas.Left="9" Canvas.Top="428" TextWrapping="Wrap" Width="398" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
             <TextBlock Text="Категория:" FontSize="14" FontWeight="Bold" Canvas.Left="10" Canvas.Top="454" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-            <ComboBox Canvas.Left="84" Canvas.Top="451" Width="100">
+            <ComboBox x:Name="CbCategory2" Canvas.Left="84" Canvas.Top="451" Width="100">
                 <ComboBoxItem Content="A"/>
                 <ComboBoxItem Content="B"/>
                 <ComboBoxItem Content="C"/>
-                <ComboBoxItem Content="D"/>
-                <ComboBoxItem Content="E"/>
             </ComboBox>
 
             <TextBlock Text="Дата выдачи ВУ:" FontSize="14" FontWeight="Bold" Canvas.Left="200" Canvas.Top="454"/>
@@ -152,13 +149,12 @@
 
             <TextBlock Text="Действителен до:" FontSize="14" FontWeight="Bold" Canvas.Left="10" Canvas.Top="575" HorizontalAlignment="Left" VerticalAlignment="Top"/>
 
-            <TextBlock Text="ТС застраховано от ущерба:" FontSize="14" FontWeight="Bold" Canvas.Left="174" Canvas.Top="598" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-            <CheckBox x:Name="CheckStrax2" Canvas.Left="370" Canvas.Top="602" RenderTransformOrigin="0.563,0.731" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+            <TextBlock Text="ТС застраховано от ущерба:" FontSize="14" FontWeight="Bold" Canvas.Left="174" Canvas.Top="575" HorizontalAlignment="Center" VerticalAlignment="Top"/>
             <TextBox x:Name="TbGotDate2" Canvas.Left="320" TextWrapping="Wrap" Canvas.Top="455" Width="87" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <TextBox x:Name="TbValidDate2" Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="599" Width="119" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
             <TextBlock Text="Место первоначального удара:" FontSize="14" FontWeight="Bold" Canvas.Left="10" Canvas.Top="622" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-            <Button Content="Открыть форму" Canvas.Left="232" Canvas.Top="622" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Button Content="Открыть форму" Canvas.Left="232" Canvas.Top="622" HorizontalAlignment="Center" VerticalAlignment="Top" Click="Button_Click_1"/>
             <TextBlock Text="Характер и перечень видимых поврежденных деталей и элементов:" FontWeight="Bold" Canvas.Left="10" Canvas.Top="646" HorizontalAlignment="Center" VerticalAlignment="Top"/>
             <TextBox x:Name="TbDiscription2" TextWrapping="Wrap" Canvas.Left="9" Canvas.Top="667" Height="64" HorizontalAlignment="Left" VerticalAlignment="Top" Width="400"/>
             <TextBlock Text="Замечания:" FontSize="14" FontWeight="Bold" Canvas.Left="10" Canvas.Top="736" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -171,7 +167,30 @@
             <Label Content="Дата рож." Canvas.Left="2" Canvas.Top="384" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <Label Content="Адрес" Canvas.Left="11" Canvas.Top="356" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <Label Content="Телефон" Canvas.Left="211" Canvas.Top="384" FontWeight="Bold" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <ComboBox x:Name="CbTF2" Canvas.Left="179" Canvas.Top="594" HorizontalAlignment="Left" VerticalAlignment="Center" Width="53">
+                <ComboBoxItem Content="Да"/>
+                <ComboBoxItem Content="Нет"/>
+            </ComboBox>
         </Canvas>
+        <Grid Margin="471,670,489,59">
+            <ComboBox x:Name="ShapeSelector" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="38,10,0,0" Width="150" Height="30">
+                <ComboBoxItem Content="Линия" />
+                <ComboBoxItem Content="Прямоугольник" />
+                <ComboBoxItem Content="Стрелка" />
+                <ComboBoxItem Content="Буква A" />
+                <ComboBoxItem Content="Буква B" />
+                <ComboBoxItem Content="Перемещение" />
+            </ComboBox>
+            <Button Content="Сохранить" Width="100" Height="30" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0" Click="SaveCanvasAsJpg" />
+            <Border BorderBrush="Black" BorderThickness="2" Margin="0,50,0,0">
+                <Canvas x:Name="DrawingCanvas" Background="White"
+                    MouseLeftButtonDown="Canvas_MouseLeftButtonDown"
+                    MouseMove="Canvas_MouseMove"
+                    MouseLeftButtonUp="Canvas_MouseLeftButtonUp" />
+            </Border>
+        </Grid>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="756,553,0,0" VerticalAlignment="Top" Click="Button_Click_3"/>
+
 
 
     </Grid>
