--- a/komissar/MainWindow.xaml
+++ b/komissar/MainWindow.xaml
@@ -5,9 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:komissar"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
         Title="MainWindow" Height="1051" Width="1392"
         KeyDown="Window_KeyDown">
-    <Grid Margin="10,-6,10,0" Height="1023" VerticalAlignment="Top" RenderTransformOrigin="0.491,0.453">
+    <Grid  Margin="10,-6,10,0" Height="1032" VerticalAlignment="Top" RenderTransformOrigin="0.491,0.453">
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition Width="0*"/>
@@ -130,7 +132,7 @@
             <TextBox x:Name="TbDrvYd2" Canvas.Left="9" Canvas.Top="428" TextWrapping="Wrap" Width="398" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
             <TextBlock Text="Категория:" FontSize="14" FontWeight="Bold" Canvas.Left="10" Canvas.Top="454" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-            <ComboBox x:Name="CbCategory2" Canvas.Left="84" Canvas.Top="451" Width="100">
+            <ComboBox x:Name="CbCategory2" Canvas.Left="89" Canvas.Top="453" Width="100" SelectionChanged="CbCategory2_SelectionChanged">
                 <ComboBoxItem Content="A"/>
                 <ComboBoxItem Content="B"/>
                 <ComboBoxItem Content="C"/>
@@ -172,8 +174,13 @@
                 <ComboBoxItem Content="Нет"/>
             </ComboBox>
         </Canvas>
-        <Grid Margin="471,670,489,59">
-            <ComboBox x:Name="ShapeSelector" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="38,10,0,0" Width="150" Height="30">
+        <Grid x:Name="savegridview" Margin="510,758,510,68">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="69*"/>
+                <RowDefinition Height="68*"/>
+            </Grid.RowDefinitions>
+
+            <ComboBox x:Name="ShapeSelector" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,-44,0,0" Width="150" Height="30">
                 <ComboBoxItem Content="Линия" />
                 <ComboBoxItem Content="Прямоугольник" />
                 <ComboBoxItem Content="Стрелка" />
@@ -181,12 +188,20 @@
                 <ComboBoxItem Content="Буква B" />
                 <ComboBoxItem Content="Перемещение" />
             </ComboBox>
-            <Button Content="Сохранить" Width="100" Height="30" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0" Click="SaveCanvasAsJpg" />
-            <Border BorderBrush="Black" BorderThickness="2" Margin="0,50,0,0">
-                <Canvas x:Name="DrawingCanvas" Background="White"
-                    MouseLeftButtonDown="Canvas_MouseLeftButtonDown"
-                    MouseMove="Canvas_MouseMove"
-                    MouseLeftButtonUp="Canvas_MouseLeftButtonUp" />
+
+            <Button Content="Сохранить" Width="100" Height="30" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,-44,6,0" Click="SaveCanvasAsJpg" />
+
+            <Border x:Name="BorderWithCanvas"
+        BorderBrush="Black"
+        BorderThickness="2"
+        Background="White"
+        Grid.RowSpan="2"
+        Margin="0">
+                <Canvas x:Name="DrawingCanvas"
+            Background="White"
+            MouseLeftButtonDown="Canvas_MouseLeftButtonDown"
+            MouseMove="Canvas_MouseMove"
+            MouseLeftButtonUp="Canvas_MouseLeftButtonUp" />
             </Border>
         </Grid>
         <Button Content="Button" HorizontalAlignment="Left" Margin="756,553,0,0" VerticalAlignment="Top" Click="Button_Click_3"/>
